# rusty-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  idt.rs  lib.rs  main.rs  print.rs  vga.rs  vga_buffer.rs
src/io/: keyboard.rs  mod.rs  pic.rs  scanner.rs
src/pic/: keyboard.rs  keypress_queue.rs  mod.rs  timer.rs
src/programs/: exit.rs  mod.rs  shell.rs
src/vga/: buffer.rs  mod.rs  writer.rs
