[package]
name = "rusty-os"
version = "0.0.1"
authors = ["David Angell <davidjangell42@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
pc-keyboard = "0.5.0"
pic8259 = "0.10.4"
spin = "0.9.8"
x86_64 = "0.14.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
